syntax = "proto3";//protobuf version

//PRESENTATION LAYER
option csharp_namespace = "Discount.Grpc";

package discount;

service DiscountProtoService {

rpc DiscountList (DiscountListRequest) returns (DiscountListResponse);
rpc GetDiscount (GetDiscountRequest) returns (CouponModel);
rpc CreateDiscount (CreateDiscountRequest) returns (CouponModel);
rpc UpdateDiscount (UpdateDiscountRequest) returns (CouponModel);
rpc DeleteDiscount (DeleteDiscountRequest) returns (DeleteDiscountResponse);

}

message DiscountListRequest{
	int32 pagesize = 1;

}

message DiscountListResponse{

  repeated CouponModel coupons = 1;

}

message GetDiscountRequest{
	string productName = 1;
}

message CouponModel{

int32 id = 1;
string productName = 2;
string description = 3;
int32 amount = 4;

}

message CreateDiscountRequest {
	CouponModel coupon = 1;
}

message UpdateDiscountRequest {
	CouponModel coupon = 1;
}

message DeleteDiscountRequest {
	string productName = 1;
}

message DeleteDiscountResponse {
	bool success = 1;
}

